--- a/time2padel-app/src/components/Mypendingteams/index.sass
+++ b/time2padel-app/src/components/Mypendingteams/index.sass
@@ -10,14 +10,15 @@
 
     &__box
         width: 100vw
-    
+
     .back-button
         display: flex
         flex-direction: row
-        justify-content: flex-end
+        justify-content: center
         align-content: center
-        width: 90%
+        width: 100%
         margin-top: 5%
+        margin-right: 5%
         &__button
             font-family: 'Big Shoulders Text'
             letter-spacing: .1rem
