--- a/time2padel-app/src/components/Team/index.sass
+++ b/time2padel-app/src/components/Team/index.sass
@@ -10,11 +10,13 @@
         flex-direction: column
         flex-wrap: wrap
         justify-content: space-around
-        width: 93%
+        width: 80%
         height: 8rem
         border: solid black 2px
+        border-radius: 1rem
         background-color: #d0f7b1
         margin-bottom: 3%
+        
         &__title
             font-size: 140%
             width: 100%
@@ -32,6 +34,7 @@
             align-items: center
             margin-top: -4%
             font-size: 110%
-            
+            @media only screen and (min-width: 1024px)
+                margin-top: -1%
             
                 
