--- a/time2padel-app/src/components/Main/news.sass
+++ b/time2padel-app/src/components/Main/news.sass
@@ -12,12 +12,15 @@
         width: 48%
         padding: 1%
         margin-left: 2%
-
+        @media only screen and (min-width: 1024px)
+            margin-top: -1%
+            width: 30%
         a 
             all: unset
             width: 90%
             height: 83%
-        
+            @media only screen and (min-width: 1024px)
+                width: 75%
         &__title
             font-family: 'Staatliches'
             font-size: 145%
@@ -25,7 +28,7 @@
         &__img
             max-width: 75%
             height: 13vh
-        // &__text
-        //     font-size: 75%  
-        //     width: 100%
+            @media only screen and (min-width: 1024px)
+                margin-rigth: 6%
+    
           
