--- a/time2padel-app/src/components/Myteams/index.sass
+++ b/time2padel-app/src/components/Myteams/index.sass
@@ -5,9 +5,11 @@
     display: flex
     flex-direction: column
     align-items: center
-    flex-wrap: wrap
     width: 100vw
-
+    @media only screen and (min-width: 1024px)
+        align-items: flex-start
+        flex-wrap: wrap
+        flex-direction: row
     &__box
         width: 100vw
 
