--- a/time2padel-app/src/components/Pendingteam/index.sass
+++ b/time2padel-app/src/components/Pendingteam/index.sass
@@ -10,8 +10,9 @@
         flex-direction: column
         flex-wrap: wrap
         justify-content: space-around
-        width: 93%
+        width: 80%
         height: 8rem
+        border-radius: 1rem
         border: solid black 2px
         background-color: #f7ebad
         margin-bottom: 3%
@@ -22,7 +23,9 @@
             flex-direction: row
             justify-content: center
             border-bottom: solid 1px
-            text-align: center            
+            text-align: center      
+            @media only screen and (min-width: 1024px)
+                height: 30%      
         .buttons
             display: flex
             flex-direction: row
