--- a/time2padel-app/src/components/Registration-page/index.sass
+++ b/time2padel-app/src/components/Registration-page/index.sass
@@ -7,14 +7,16 @@
     justify-content: center
     width: 100%
     height: 100%
-    // background-color: #eee29e
-    background: url(http://vidaytenis.com/wp-content/uploads/2019/02/amarillas-no-siempre-imprescindibles-en-cada-juego.jpg)
-
-
+    background: url(http://vidaytenis.com/wp-content/uploads/2019/02/amarillas-no-siempre-imprescindibles-en-cada-juego.jpg) no-repeat center center fixed
+    -webkit-background-size: cover
+    -moz-background-size: cover
+    -o-background-size: cover
+    background-size: cover
     .container
         position: fixed
         top: 12%
         width: 80%
+        height: 75%
         min-height: 70%
         background-color: #ece9e9
         border-radius: 2rem
@@ -24,7 +26,11 @@
         flex-wrap: wrap
         justify-content: space-around
         align-items: center
-
+        @media only screen and (min-width: 1024px)
+            top: 6.5%
+            left: 30%
+            width: 37%
+            height: 88%
         &__title
             display: flex
             justify-content: center
