--- a/time2padel-app/src/components/Registration-page/sign-in.sass
+++ b/time2padel-app/src/components/Registration-page/sign-in.sass
@@ -1,6 +1,5 @@
 .sign-in
     width: 100vw
-    height: 40%
     display: flex
     flex-direction: column
     flex-wrap: wrap
@@ -13,12 +12,15 @@
         flex-direction: column
         color: black
         align-items: center
-
+        width: 100%
+        justify-content: center
         & label
             margin: 2%
-        & label
             width: 100%
-    
+            display: flex
+            justify-content: space-between
+            @media only screen and (min-width: 1024px)
+                width: 60%
     .button
         display: flex
         flex-direction: row
