--- a/time2padel-app/src/components/Landing/index.sass
+++ b/time2padel-app/src/components/Landing/index.sass
@@ -1,20 +1,20 @@
-@keyframes images
-    0%
-        right: 0%
-    50%
-        right: 100%
-        transform: scaleX(-1)
-    100%
-        right: 0%
+// @keyframes images
+//     0%
+//         right: 0%
+//     50%
+//         right: 100%
+//         transform: scaleX(-1)
+//     100%
+//         right: 0%
 
-@keyframes MoveUpDown
-    0%
-        bottom: 0%
-    50%
-        bottom: 100%
-        transform: translateY(10px)
-    100%
-        bottom: 0%
+// @keyframes MoveUpDown
+//     0%
+//         bottom: 0%
+//     50%
+//         bottom: 100%
+//         transform: translateY(10px)
+//     100%
+//         bottom: 0%
 
 .landing
     display: flex
